update docker multi-stage build, separate compose files